cmake_minimum_required(VERSION 3.20)
project(ons)
set(CMAKE_CXX_STANDARD 23)

# set(SDL_H /opt/homebrew/Cellar/sdl2/2.32.0/include/SDL2)
# set(SDL_IMG /opt/homebrew/Cellar/sdl2_image/2.8.5/include/SDL2)
# set(SDL_TTF /opt/homebrew/Cellar/sdl2_ttf/2.24.0/include/SDL2)
# set(SDL_MIXER /opt/homebrew/Cellar/sdl2_mixer/2.8.1_1/include/SDL2)
find_package(SDL2 REQUIRED)
find_package(SDL2_image REQUIRED)
find_package(SDL2_ttf REQUIRED)
find_package(SDL2_mixer REQUIRED)
find_package(Lua REQUIRED)
find_package(Fontconfig REQUIRED)

# find_package(jpeg REQUIRED)
# find_package(ogg REQUIRED)

# find_package(smpeg2 REQUIRED)
# find_package(libvorbis_dev REQUIRED)
find_library(NAME SDL2_image REQUIRED)
find_library(NAME SDL2_ttf REQUIRED)
find_library(NAME SDL2_mixer REQUIRED)
find_library(NAME SDL2 REQUIRED)
find_package(BZip2 REQUIRED)

# include_directories(${SDL_H})
# include_directories(${SDL_IMG})
# include_directories(${SDL_TTF})
# include_directories(${SDL_MIXER})
include_directories(${SDL2_INCLUDE_DIRS})
include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
include_directories(${SDL2_MIXER_INCLUDE_DIRS})
include_directories(${LUA_INCLUDE_DIR})
include_directories(${FONTCONFIG_IMAGE_INCLUDE_DIRS})
include_directories(${JPEG_IMAGE_INCLUDE_DIRS})
include_directories(${OGG_IMAGE_INCLUDE_DIRS})
include_directories(${LIBVORBIS_DEV_IMAGE_INCLUDE_DIRS})
include_directories(${BZIP2_INCLUDE_DIRS})
include_directories(${SDL2_TTF_INCLUDE_DIRS} ./builtin_dll ./simd)

# set(SDL_LIB /opt/homebrew/Cellar/sdl2/2.32.0/lib/libSDL2-2.0.0.dylib)
# set(SDL_LIB_IMG /opt/homebrew/Cellar/sdl2_image/2.8.5/lib/libSDL2_image.dylib)
# set(SDL_LIB_TTF /opt/homebrew/Cellar/sdl2_ttf/2.24.0/lib/libSDL2_ttf.dylib)
# set(SDL_LIB_MIXER /opt/homebrew/Cellar/sdl2_mixer/2.8.1_1/lib/libSDL2_mixer.dylib)
# link_libraries(${SDL_LIB}) # 增加SDL链接库目录
# link_libraries(${SDL_LIB_IMG})
# link_libraries(${SDL_LIB_TTF})
# link_libraries(${SDL_LIB_MIXER})
file(GLOB ASTCPP ./*.cpp)
file(GLOB_RECURSE built ./builtin_dll/*.cpp)
file(GLOB_RECURSE smid ./smid/*.cpp)
set(Lutf16 ./coding2utf16.cpp ./sjis2utf16.cpp ./gbk2utf16.cpp)
set(Lsardec ./DirectReader.cpp ./SarReader.cpp ${Lutf16})
set(Lnsadec ${Lsardec} ./NsaReader.cpp ${Lutf16})
set(Lsarconv ${Lsardec} ./sarconv.cpp ./conv_shared.cpp resize_image.cpp)
set(Lnsaconv ${Lnsadec} ./nsaconv.cpp ./conv_shared.cpp resize_image.cpp)
list(REMOVE_ITEM ASTCPP ${CMAKE_CURRENT_SOURCE_DIR}/./nsaconv.cpp ${CMAKE_CURRENT_SOURCE_DIR}/./nsadec.cpp ${CMAKE_CURRENT_SOURCE_DIR}/./onscripter_main.cpp ${CMAKE_CURRENT_SOURCE_DIR}/./sarconv.cpp ${CMAKE_CURRENT_SOURCE_DIR}/./sardec.cpp)

# 增加SDL链接库目录
link_libraries(${LUA_LIBRARIES})
link_libraries(SDL2_image)
link_libraries(SDL2_ttf)
link_libraries(SDL2_mixer)
link_libraries(SDL2)
link_libraries(${JPEG_LIBRARIES})
link_libraries(${OGG_LIBRARIES})
link_libraries(${BZIP2_LIBRARIES})

# 添加可执行文件
add_executable(nsadec ./nsadec.cpp ${Lnsadec})
add_executable(nsaconv ./nsaconv.cpp ${Lnsaconv})
add_executable(sarconv ./sarconv.cpp ${Lsarconv})
add_executable(sardec ./sardec.cpp ${Lsardec})
add_executable(ons ./onscripter_main.cpp ${ASTCPP})
